force-app/main/default/objects/lep360learning__Path_Certification__c/lep360learning__Path_Certification__c.object-meta.xml
<CustomObject>
    <label>360Learning Path Certification</label>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>360Learning Path Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>