force-app/main/default/objects/lep360learning__Path_Certification__c/fields/lep360learning__Path_certification_date__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__Path_certification_date__c</fullName>
    <label>360Learning Path certification date</label>
    <type>Date</type>
</CustomField>