force-app/main/default/objects/lep360learning__Path_Certification__c/fields/lep360learning__Path_certification_id__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__Path_certification_id__c</fullName>
    <label>360Learning Path certification id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>