force-app/main/default/objects/lep360learning__Path_Certification__c/fields/lep360learning__Path_certification_name__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__Path_certification_name__c</fullName>
    <label>360Learning Path certification name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>