force-app/main/default/objects/lep360learning__Path_Certification__c/fields/lep360learning__Path_session_name__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__Path_session_name__c</fullName>
    <label>360Learning Path session name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>